[gd_scene load_steps=4 format=3 uid="uid://d4l4oufiruqea"]

[ext_resource type="Script" path="res://ui/main_menu.gd" id="1_8gy84"]

[sub_resource type="LabelSettings" id="LabelSettings_kvqlu"]
font_size = 60
font_color = Color(0, 0.419608, 0.372549, 1)
outline_size = 20
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_8gy84"]
font_color = Color(0, 0, 0, 1)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8gy84")

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -160.0
offset_right = 160.0
offset_bottom = 90.0
grow_horizontal = 2
text = "Game Title"
label_settings = SubResource("LabelSettings_kvqlu")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -45.0
offset_right = 75.0
offset_bottom = 91.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="ContinueButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Continue"

[node name="NewGameButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "New Game"

[node name="SettingsButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Settings"

[node name="QuitButton" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="Overlay" type="Control" parent="MarginContainer"]
visible = false
layout_mode = 2

[node name="ColorRect" type="ColorRect" parent="MarginContainer/Overlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -75.0
offset_right = 100.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2

[node name="ResetLabel" type="Label" parent="MarginContainer/Overlay"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
text = "Would you like to reset
your progress?"
label_settings = SubResource("LabelSettings_8gy84")
horizontal_alignment = 1
vertical_alignment = 1

[node name="YesButton" type="Button" parent="MarginContainer/Overlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -47.5
offset_top = -5.5
offset_right = -12.5
offset_bottom = 25.5
grow_horizontal = 2
grow_vertical = 2
text = "Yes
"

[node name="NoButton" type="Button" parent="MarginContainer/Overlay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 14.5
offset_top = -5.5
offset_right = 45.5
offset_bottom = 25.5
grow_horizontal = 2
grow_vertical = 2
text = "No
"

[connection signal="pressed" from="MarginContainer/VBoxContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="MarginContainer/Overlay/YesButton" to="." method="_on_yes_button_pressed"]
[connection signal="pressed" from="MarginContainer/Overlay/NoButton" to="." method="_on_no_button_pressed"]
